[251116] 문제변형 코드 및 결과

--- a/multiple_answer_abcd.ipynb
+++ b/multiple_answer_abcd.ipynb
@@ -10,31 +10,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "459d795a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/homebrew/anaconda3/envs/aic/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO 11-15 08:52:56 [__init__.py:216] Automatically detected platform cpu.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os, json\n",
     "from tools.pipeline.config import ONEDRIVE_PATH\n",
     "\n",
-    "with open(os.path.join(ONEDRIVE_PATH, 'evaluation/eval_data/7_multiple_rw/multiple_classify.json'), 'r', encoding='utf-8') as f:\n",
+    "with open('multiple_classify.json', 'r', encoding='utf-8') as f:\n",
     "    multiple = json.load(f)"
    ]
   },
@@ -43,34 +27,7 @@
    "id": "be44ead2",
    "metadata": {},
    "source": [
-    "## 가나다라 모두 고르시오"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d29de344",
-   "metadata": {},
-   "source": [
-    "### 가나다라 선지로 바꾸기"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "b5998561",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "160\n"
-     ]
-    }
-   ],
-   "source": [
-    "pick_abcd = [p for p in multiple if p['pick'] == 'abcd']\n",
-    "print(len(pick_abcd))"
+    "## 모두고르시오"
    ]
   },
   {
@@ -79,6 +36,52 @@
    "metadata": {},
    "source": [
     "### 변형하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "693a3bdf",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'transformers'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtools\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcore\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mllm_query\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m LLMQuery\n\u001b[0;32m      2\u001b[0m llm \u001b[38;5;241m=\u001b[39m LLMQuery()\n\u001b[0;32m      4\u001b[0m system_prompt \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\"\"\u001b[39m\u001b[38;5;124m당신은 프롬프트 전문가입니다. 다음은 ㄱ,ㄴ,ㄷ,ㄹ / 가,나,다,라 등 보기 중 옳은 것을 모두 고르는 문제입니다. 다음 문제의 보기를 찾아 선택지로 바꾸고 (예: ① ㄱ, ② ㄴ, ③ ㄷ, ④ ㄹ / ① 가, ② 나, ③ 다, ④ 라)\u001b[39m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;124m주어진 문제와 정답, 해설을 참고하여 선택지 중 옳은 것을 모두 고르는 문제로 변형하려고 합니다. 아래와 같은 프롬프트를 사용하려고 할 때, 올바른 프롬프트인지 확인해주세요.\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m\n",
+      "File \u001b[1;32mc:\\Users\\PC\\Desktop\\SFAIcenter-1\\tools\\core\\__init__.py:3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# core 패키지 - 핵심 유틸리티 클래스\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m FileManager, TextProcessor, JSONHandler\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mllm_query\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m LLMQuery\n\u001b[0;32m      5\u001b[0m __all__ \u001b[38;5;241m=\u001b[39m [\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFileManager\u001b[39m\u001b[38;5;124m'\u001b[39m,      \u001b[38;5;66;03m# 파일 및 경로 관리, Excel 데이터 처리\u001b[39;00m\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTextProcessor\u001b[39m\u001b[38;5;124m'\u001b[39m,    \u001b[38;5;66;03m# 텍스트 처리 유틸리티\u001b[39;00m\n\u001b[0;32m      8\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mJSONHandler\u001b[39m\u001b[38;5;124m'\u001b[39m,     \u001b[38;5;66;03m# JSON 파일 읽기/쓰기, 포맷 변환\u001b[39;00m\n\u001b[0;32m      9\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLLMQuery\u001b[39m\u001b[38;5;124m'\u001b[39m         \u001b[38;5;66;03m# LLM 쿼리 (OpenRouter, vLLM)\u001b[39;00m\n\u001b[0;32m     10\u001b[0m ]\n",
+      "File \u001b[1;32mc:\\Users\\PC\\Desktop\\SFAIcenter-1\\tools\\core\\llm_query.py:12\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mconfigparser\u001b[39;00m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mopenai\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m OpenAI\n\u001b[1;32m---> 12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtransformers\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m AutoTokenizer\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mvllm\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m LLM, SamplingParams\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtyping\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Optional\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'transformers'"
+     ]
+    }
+   ],
+   "source": [
+    "from tools.core.llm_query import LLMQuery\n",
+    "llm = LLMQuery()\n",
+    "\n",
+    "system_prompt = \"\"\"당신은 프롬프트 전문가입니다. 다음은 ㄱ,ㄴ,ㄷ,ㄹ / 가,나,다,라 등 보기 중 옳은 것을 모두 고르는 문제입니다. 다음 문제의 보기를 찾아 선택지로 바꾸고 (예: ① ㄱ, ② ㄴ, ③ ㄷ, ④ ㄹ / ① 가, ② 나, ③ 다, ④ 라)\n",
+    "주어진 문제와 정답, 해설을 참고하여 선택지 중 옳은 것을 모두 고르는 문제로 변형하려고 합니다. 아래와 같은 프롬프트를 사용하려고 할 때, 올바른 프롬프트인지 확인해주세요.\"\"\"\n",
+    "user_prompt = \"\"\"\"========================= 아래 ==========================\n",
+    "당신은 25년 경력의 문제 출제 전문가입니다.\n",
+    "\n",
+    "변형 규칙\n",
+    "1) '모두 고르시오' 문제의 대상(보기)를 선택지로 바꿉니다(예: ① ㄱ, ② ㄴ, ③ ㄷ, ④ ㄹ / ① 가, ② 나, ③ 다, ④ 라).\n",
+    "2) 기존의 정답을 참고하여 옳은 선택지를 모두 고릅니다. (예: 기존 정답이 ㄱ,ㄷ 이면 새로운 정답은 ①,③).\n",
+    "3)그 외 문장과 LaTeX 수식이나 테이블 표현은 원형을 최대한 보존합니다.\n",
+    "\n",
+    "  출력 형식\n",
+    "  {{\n",
+    "    \"question_id\": \"문제번호\",\n",
+    "    \"question\": \"문제\",\n",
+    "    \"options\": [\"① 선택지1\", \"② 선택지2\", \"③ 선택지3\", \"④ 선택지4\", \"⑤ 선택지5\"],\n",
+    "    \"answer\": [\"정답번호1\", \"정답번호2\", ...], \n",
+    "    \"explanation\": \"① 옳다(원래 답 중 하나): 근거 ... / ③ 옳다(원래 답 중 하나): 근거 ... / ⑤ 옳지 않다: 근거 ...\"\n",
+    "  }}\"\"\"\n",
+    "\n",
+    "response = llm.query_openrouter(system_prompt, user_prompt, model_name='openai/gpt-5')"
    ]
   },
   {
@@ -94,9 +97,9 @@
     "from datetime import datetime\n",
     "\n",
     "# 로깅 설정\n",
-    "log_dir = '/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/logs'\n",
+    "log_dir = 'logs'\n",
     "os.makedirs(log_dir, exist_ok=True)\n",
-    "log_file = os.path.join(log_dir, f'multiple_answer.log')\n",
+    "log_file = os.path.join(log_dir, f'multiple_answer_abcd.log')\n",
     "\n",
     "logging.basicConfig(\n",
     "    level=logging.INFO,\n",
@@ -110,7 +113,7 @@
     "logger = logging.getLogger(__name__)\n",
     "\n",
     "llm = LLMQuery()\n",
-    "output_dir = os.path.join(ONEDRIVE_PATH, 'evaluation/eval_data/7_multiple_rw/pick_right')\n",
+    "output_dir = os.path.join('7_multiple_rw/pick_right')\n",
     "\n",
     "logger.info(f\"로그 파일: {log_file}\")\n",
     "logger.info(\"=\" * 80)\n",
@@ -121,9 +124,9 @@
     "  not_parsed_responses = []\n",
     "  no_responses = []\n",
     "\n",
-    "  for idx, p in enumerate(pick_right_sampling[i], 1):\n",
+    "  for idx, p in enumerate(pick_abcd_sampling, 1):\n",
     "    question_id = p['file_id'] + '_' + p['tag']\n",
-    "    logger.info(f\"\\n[{i}개 그룹] {idx}/{len(pick_right_sampling[i])} - 문제 ID: {question_id} 처리 중...\")\n",
+    "    logger.info(f\"\\n[{i}개 그룹] {idx}/{len(pick_abcd_sampling)} - 문제 ID: {question_id} 처리 중...\")\n",
     "    options_ct = len(p['options'])\n",
     "\n",
     "    if options_ct - i == 1:\n",
