[251116] 문제 재분류

--- a/json_rev.ipynb
+++ b/json_rev.ipynb
@@ -177,8 +177,10 @@
    "source": [
     "import os\n",
     "\n",
-    "from_path = \"/Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/evaluation/eval_data/4_multiple_exam\"\n",
-    "to_path = \"yjmoon@oci004:/home/yjmoon/\"\n",
+    "# from_path = \"/Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/evaluation/eval_data/4_multiple_exam\"\n",
+    "from_path = \"/Users/jinym/Downloads/Midm-2.0-Mini-Instruct\"\n",
+    "# to_path = \"yjmoon@oci001:/home/yjmoon/\"\n",
+    "to_path = \"yjmoon@oci004:/srv4-data/vanilla_models/\"\n",
     "\n",
     "\n",
     "# # 업로드\n",
@@ -490,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,78 +550,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>/srv4-data/vanilla_models/Qwen3-32B</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>SS0087_q_0284_0001</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>SS0087_q_0298_0002</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>SS0087_q_0300_0002</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>SS0087_q_0312_0001</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>SS0087_q_0317_0002</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                   id  /srv4-data/vanilla_models/Qwen3-32B\n",
-       "0  SS0087_q_0284_0001                                    0\n",
-       "1  SS0087_q_0298_0002                                    0\n",
-       "2  SS0087_q_0300_0002                                    0\n",
-       "3  SS0087_q_0312_0001                                    0\n",
-       "4  SS0087_q_0317_0002                                    0"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Excel 파일에서 정확도 계산 (전체, subject별, domain별, subdomain별)\n",
     "import pandas as pd\n",
@@ -641,16 +574,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/z3/4h8q07hj2l7fsr4chwmfg9xw0000gn/T/ipykernel_9606/2285650317.py:5: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value 'B' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
-      "  pred_wide.loc[pred_wide['id'] == new_t[0], '/srv4-data/vanilla_models/Qwen3-32B'] = new_t[1]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for t in txt:\n",
     "    t = t.replace('\\\\t', '<TAB>').replace('\\t', '<TAB>')\n",
