--- a/multiple_answer.ipynb
+++ b/multiple_answer.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "9deda92b",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "36ee8d5c",
    "metadata": {},
    "outputs": [
@@ -93,16 +93,19 @@
     "         (re.search(r'[ⓐⓑⓒⓓⓔ]', question) and ('모두 고른' in question or '모두 묶인' in question)) or \\\n",
     "         (re.search(r'[㉮㉯㉰㉱㉲]', question) and ('모두 고른' in question or '모두 묶인' in question or \"묶여진 것은\" in question)):\n",
     "        pick_abcd.append(m)\n",
+    "        m['pick'] = 'abcd'\n",
     "    # 1. 옳은 것을 고르는 문제 (단일 선택)\n",
     "    # if ('옳은' in question) or ('옳게' in question) or ('해당하는' in question) or ('적절한' in question) or ('적절하게' in question) or ('바르게' in question) or ('올바른' in question) or ('가장 깊은' in question) or ('가장 타당한' in question) or ('관련 있는' in question):\n",
     "    #     pick_right.append(m)\n",
     "    # 2. 옳지 않은 것을 고르는 문제 (단일 선택)\n",
     "    elif ('않은' in question) or ('못한' in question) or ('없는' in question) or ('거리가 먼' in question) or ('아닌' in question) or ('아니하는 것' in question) or ('않는' in question) or (\"않게\" in question) or ('잘못된' in question) or ('틀린' in question) or ('다른' in question) or ('무관한' in question) or ('가장 먼' in question) or ('어려운' in question):\n",
     "        pick_wrong.append(m)\n",
+    "        m['pick'] = 'wrong'\n",
     "    else:\n",
     "        # 분류되지 않은 항목\n",
     "        # remaining.append(m)\n",
     "        pick_right.append(m)\n",
+    "        m['pick'] = 'right'\n",
     "\n",
     "# 분류 결과 확인\n",
     "print(f\"전체: {len(multiple)}\")\n",
