[251118] 노트북파일 초기화

--- a/test.ipynb
+++ b/test.ipynb
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,22 +650,14 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/yejin/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/evaluation/eval_data/6_exam_evaluation/3rd/3rd_evaluation_ALL.xlsx\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import os\n",
     "from tools.pipeline.config import ONEDRIVE_PATH\n",
     "\n",
     "model_name = 'ALL'\n",
-    "excel_path = os.path.join(ONEDRIVE_PATH, f'evaluation/eval_data/6_exam_evaluation/3rd/3rd_evaluation_{model_name}.xlsx')\n",
+    "excel_path = os.path.join(ONEDRIVE_PATH, f'evaluation/eval_data/6_exam_evaluation/5th/5th_evaluation_{model_name}.xlsx')\n",
     "print(excel_path)\n",
     "pred_wide = pd.read_excel(excel_path, sheet_name='모델별예측')"
    ]
@@ -674,38 +666,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['SS0108_q_0334_0002', 'SS0118_q_0215_0006', 'SS0162_q_0381_0002', 'SS0162_q_0396_0001', 'SS0162_q_0412_0002', 'SS0182_q_0255_0001', 'SS0189_q_0196_0003', 'SS0192_q_0134_0004', 'SS0193_q_0239_0001', 'SS0197_q_0078_0006', 'SS0199_q_0031_0001', 'SS0199_q_0107_0002', 'SS0207_q_0238_0001', 'SS0207_q_0357_0002', 'SS0217_q_0443_0002', 'SS0245_q_0616_0001', 'SS0251_q_0246_0002', 'SS0251_q_0250_0003', 'SS0386_q_0158_0001', 'SS0396_q_0093_0002', 'SS0397_q_0112_0003', 'SS0397_q_0116_0003', 'SS0397_q_0158_0002', 'SS0398_q_0042_0002', 'SS0405_q_0422_0001', 'SS0405_q_0423_0001', 'SS0406_q_0067_0001', 'SS0421_q_0656_0003', 'SS0421_q_0802_0003', 'SS0421_q_0847_0001']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "empty_ids = pred_wide[pred_wide['openai/gpt-5'].isna()].id.tolist()\n",
+    "empty_ids = pred_wide[pred_wide['google/gemini-2.5-pro'].isna()].id.tolist()\n",
     "# print(pred_wide.columns[-1])\n",
     "print(empty_ids)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "new_json = []\n",
     "for q in empty_ids:\n",
-    "    for m in third_exam:\n",
+    "    for m in fifth_exam:\n",
     "        if m['file_id']+\"_\"+m['tag'] == q:\n",
     "            # print(m)\n",
     "            new_json.append(m)\n",
@@ -715,48 +691,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "30"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(new_json)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
-    "with open('model_new.json', 'w', encoding='utf-8') as f:\n",
+    "with open(os.path.join(ONEDRIVE_PATH, 'evaluation/model_new.json'), 'w', encoding='utf-8') as f:\n",
     "    json.dump(new_json, f, ensure_ascii=False, indent=4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Excel 파일 업데이트 완료: /Users/yejin/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/evaluation/eval_data/6_exam_evaluation/4th/4th_evaluation_ALL.xlsx\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Excel 파일에서 정확도 계산 (전체, subject별, domain별, subdomain별)\n",
     "import pandas as pd\n",
@@ -912,15 +860,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "# 문제 유형 나누기"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
