--- a/json_rev.ipynb
+++ b/json_rev.ipynb
@@ -509,22 +509,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def extract_answer(text):\n",
-    "    import re\n",
-    "    if isinstance(text, str):\n",
-    "        # 파일에서 리터럴 \\t (백슬래시+t)를 사용하므로 \\\\\\\\t로 매칭\n",
-    "        # [^\\s\\n]+ 로 탭 이후 공백/줄바꿈이 아닌 모든 문자 매칭 (더 유연하게)\n",
-    "        # 이렇게 하면 {번호} 같은 특수 형식도 포함됨\n",
-    "        return re.findall(r\"SS\\d+_q_\\d+_\\d+\\\\\\\\t[^\\s\\n]+\", text)\n",
-    "    return text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "with open(f\"/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/oci_result/model_output__srv4-data_vanilla_models_Qwen3-32B.txt\", \"r\", encoding=\"utf-8\") as f:\n",
     "    txt = f.read()\n",
     "\n",
@@ -547,62 +531,11 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Excel 파일에서 정확도 계산 (전체, subject별, domain별, subdomain별)\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from typing import Set\n",
-    "import ast\n",
-    "\n",
-    "# Excel 파일 경로 설정\n",
-    "excel_path = '/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/oci_result/1st_evaluation_Qwen3-32B.xlsx'\n",
-    "\n",
-    "# Excel 파일 읽기\n",
-    "df_sample = pd.read_excel(excel_path, sheet_name='전체데이터')\n",
-    "pred_wide = pd.read_excel(excel_path, sheet_name='모델별예측')\n",
-    "\n",
-    "pred_wide.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for t in txt:\n",
-    "    t = t.replace('\\\\t', '<TAB>').replace('\\t', '<TAB>')\n",
-    "    new_t = t.split('<TAB>')\n",
-    "    if len(new_t) == 2:\n",
-    "        pred_wide.loc[pred_wide['id'] == new_t[0], pred] = new_t[1]\n",
-    "# pred_wide.head()\n",
-    "pred_wide.to_excel(excel_path.replace('.xlsx', '_new.xlsx'), sheet_name='모델별예측', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "internal",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -616,7 +549,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
