--- a/test.ipynb
+++ b/test.ipynb
@@ -668,9 +668,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "empty_ids = pred_wide[pred_wide['google/gemini-2.5-pro'].isna()].id.tolist()\n",
-    "# print(pred_wide.columns[-1])\n",
-    "print(empty_ids)"
+    "# empty_ids = pred_wide[pred_wide['openai/gpt-5.1'].isna()].id.tolist()\n",
+    "print(pred_wide.columns[-1])\n",
+    "# print(empty_ids)"
    ]
   },
   {
@@ -869,7 +869,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "aic",
+   "display_name": "internal",
    "language": "python",
    "name": "python3"
   },
@@ -883,7 +883,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.19"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
