[251118] 기존 right/wrong/abcd 분류 비교 부분 삭제

--- a/make_prompt.ipynb
+++ b/make_prompt.ipynb
@@ -2,296 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "d75ba9c2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/homebrew/anaconda3/envs/aic/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os, json\n",
-    "from tools.pipeline.config import ONEDRIVE_PATH\n",
-    "\n",
-    "atc = json.load(open(os.path.join(ONEDRIVE_PATH, 'evaluation/eval_data/7_multiple_rw/answer_type_classified.json')))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "696b5de9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4957"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(atc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "b2fe6c26",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "answer_type_classified.json 분류:\n",
-      "  right: 2064\n",
-      "  wrong: 2500\n",
-      "  abcd: 393\n"
-     ]
-    }
-   ],
-   "source": [
-    "# answer_type_classified.json에서 문제들을 answer_type별로 분류\n",
-    "atc_right = []\n",
-    "atc_wrong = []\n",
-    "atc_abcd = []\n",
-    "\n",
-    "for item in atc:\n",
-    "    question_id = f\"{item['file_id']}_{item['tag']}\"\n",
-    "    answer_type = item.get('answer_type', '')\n",
-    "    \n",
-    "    if answer_type == 'right':\n",
-    "        atc_right.append(question_id)\n",
-    "    elif answer_type == 'wrong':\n",
-    "        atc_wrong.append(question_id)\n",
-    "    elif answer_type == 'abcd':\n",
-    "        atc_abcd.append(question_id)\n",
-    "    else:\n",
-    "        print(f\"answer_type_classified.json에 분류되지 않은 문제: {question_id}\")\n",
-    "\n",
-    "print(f\"answer_type_classified.json 분류:\")\n",
-    "print(f\"  right: {len(atc_right)}\")\n",
-    "print(f\"  wrong: {len(atc_wrong)}\")\n",
-    "print(f\"  abcd: {len(atc_abcd)}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "97a5ae4b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# _needcheck 폴더의 파일들에서 문제 ID 추출\n",
-    "needcheck_base = os.path.join(ONEDRIVE_PATH, 'evaluation/eval_data/7_multiple_rw/_needcheck')\n",
-    "\n",
-    "needcheck_right = set()\n",
-    "needcheck_wrong = set()\n",
-    "needcheck_abcd = set()\n",
-    "\n",
-    "# pick_right 폴더의 파일들 처리\n",
-    "pick_right_dir = os.path.join(needcheck_base, 'pick_right')\n",
-    "if os.path.exists(pick_right_dir):\n",
-    "    for filename in os.listdir(pick_right_dir):\n",
-    "        if filename.endswith('.json') and 'sampling' in filename:\n",
-    "            filepath = os.path.join(pick_right_dir, filename)\n",
-    "            try:\n",
-    "                with open(filepath, 'r', encoding='utf-8') as f:\n",
-    "                    data = json.load(f)\n",
-    "                    for item in data:\n",
-    "                        question_id = f\"{item['file_id']}_{item['tag']}\"\n",
-    "                        if item.get('pick') == 'right':\n",
-    "                            needcheck_right.add(question_id)\n",
-    "            except Exception as e:\n",
-    "                print(f\"Error reading {filename}: {e}\")\n",
-    "\n",
-    "# pick_wrong 폴더의 파일들 처리\n",
-    "pick_wrong_dir = os.path.join(needcheck_base, 'pick_wrong')\n",
-    "if os.path.exists(pick_wrong_dir):\n",
-    "    for filename in os.listdir(pick_wrong_dir):\n",
-    "        if filename.endswith('.json') and 'sampling' in filename:\n",
-    "            filepath = os.path.join(pick_wrong_dir, filename)\n",
-    "            try:\n",
-    "                with open(filepath, 'r', encoding='utf-8') as f:\n",
-    "                    data = json.load(f)\n",
-    "                    for item in data:\n",
-    "                        question_id = f\"{item['file_id']}_{item['tag']}\"\n",
-    "                        if item.get('pick') == 'wrong':\n",
-    "                            needcheck_wrong.add(question_id)\n",
-    "            except Exception as e:\n",
-    "                print(f\"Error reading {filename}: {e}\")\n",
-    "\n",
-    "# pick_abcd 폴더의 파일들 처리\n",
-    "pick_abcd_dir = os.path.join(needcheck_base, 'pick_abcd')\n",
-    "if os.path.exists(pick_abcd_dir):\n",
-    "    result_file = os.path.join(pick_abcd_dir, 'result.json')\n",
-    "    if os.path.exists(result_file):\n",
-    "        try:\n",
-    "            with open(result_file, 'r', encoding='utf-8') as f:\n",
-    "                data = json.load(f)\n",
-    "                for item in data:\n",
-    "                    question_id = item.get('question_id', '')\n",
-    "                    if question_id:\n",
-    "                        needcheck_abcd.add(question_id)\n",
-    "        except Exception as e:\n",
-    "            print(f\"Error reading pick_abcd/result.json: {e}\")\n",
-    "\n",
-    "print(f\"_needcheck 폴더 분류:\")\n",
-    "print(f\"  pick_right: {len(needcheck_right)}\")\n",
-    "print(f\"  pick_wrong: {len(needcheck_wrong)}\")\n",
-    "print(f\"  pick_abcd: {len(needcheck_abcd)}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4968b619",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 두 그룹의 분류 비교\n",
-    "atc_right_set = set(atc_right)\n",
-    "atc_wrong_set = set(atc_wrong)\n",
-    "atc_abcd_set = set(atc_abcd)\n",
-    "\n",
-    "print(\"=\" * 80)\n",
-    "print(\"분류 일치 여부 확인\")\n",
-    "print(\"=\" * 80)\n",
-    "\n",
-    "# Right 분류 비교\n",
-    "print(\"\\n[Right 분류]\")\n",
-    "right_match = atc_right_set & needcheck_right\n",
-    "right_only_atc = atc_right_set - needcheck_right\n",
-    "right_only_needcheck = needcheck_right - atc_right_set\n",
-    "\n",
-    "print(f\"  일치하는 문제 수: {len(right_match)}\")\n",
-    "print(f\"  answer_type_classified에만 있는 문제: {len(right_only_atc)}\")\n",
-    "print(f\"  _needcheck에만 있는 문제: {len(right_only_needcheck)}\")\n",
-    "\n",
-    "if right_only_atc:\n",
-    "    print(f\"\\n  answer_type_classified에만 있는 문제 샘플 (최대 10개):\")\n",
-    "    for qid in list(right_only_atc)[:10]:\n",
-    "        print(f\"    - {qid}\")\n",
-    "\n",
-    "if right_only_needcheck:\n",
-    "    print(f\"\\n  _needcheck에만 있는 문제 샘플 (최대 10개):\")\n",
-    "    for qid in list(right_only_needcheck)[:10]:\n",
-    "        print(f\"    - {qid}\")\n",
-    "\n",
-    "# Wrong 분류 비교\n",
-    "print(\"\\n[Wrong 분류]\")\n",
-    "wrong_match = atc_wrong_set & needcheck_wrong\n",
-    "wrong_only_atc = atc_wrong_set - needcheck_wrong\n",
-    "wrong_only_needcheck = needcheck_wrong - atc_wrong_set\n",
-    "\n",
-    "print(f\"  일치하는 문제 수: {len(wrong_match)}\")\n",
-    "print(f\"  answer_type_classified에만 있는 문제: {len(wrong_only_atc)}\")\n",
-    "print(f\"  _needcheck에만 있는 문제: {len(wrong_only_needcheck)}\")\n",
-    "\n",
-    "if wrong_only_atc:\n",
-    "    print(f\"\\n  answer_type_classified에만 있는 문제 샘플 (최대 10개):\")\n",
-    "    for qid in list(wrong_only_atc)[:10]:\n",
-    "        print(f\"    - {qid}\")\n",
-    "\n",
-    "if wrong_only_needcheck:\n",
-    "    print(f\"\\n  _needcheck에만 있는 문제 샘플 (최대 10개):\")\n",
-    "    for qid in list(wrong_only_needcheck)[:10]:\n",
-    "        print(f\"    - {qid}\")\n",
-    "\n",
-    "# Abcd 분류 비교\n",
-    "print(\"\\n[Abcd 분류]\")\n",
-    "abcd_match = atc_abcd_set & needcheck_abcd\n",
-    "abcd_only_atc = atc_abcd_set - needcheck_abcd\n",
-    "abcd_only_needcheck = needcheck_abcd - atc_abcd_set\n",
-    "\n",
-    "print(f\"  일치하는 문제 수: {len(abcd_match)}\")\n",
-    "print(f\"  answer_type_classified에만 있는 문제: {len(abcd_only_atc)}\")\n",
-    "print(f\"  _needcheck에만 있는 문제: {len(abcd_only_needcheck)}\")\n",
-    "\n",
-    "if abcd_only_atc:\n",
-    "    print(f\"\\n  answer_type_classified에만 있는 문제 샘플 (최대 10개):\")\n",
-    "    for qid in list(abcd_only_atc)[:10]:\n",
-    "        print(f\"    - {qid}\")\n",
-    "\n",
-    "if abcd_only_needcheck:\n",
-    "    print(f\"\\n  _needcheck에만 있는 문제 샘플 (최대 10개):\")\n",
-    "    for qid in list(abcd_only_needcheck)[:10]:\n",
-    "        print(f\"    - {qid}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9cf90ad0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 교차 분류 확인 (다른 분류로 잘못 분류된 경우)\n",
-    "print(\"\\n\" + \"=\" * 80)\n",
-    "print(\"교차 분류 확인 (잘못 분류된 경우)\")\n",
-    "print(\"=\" * 80)\n",
-    "\n",
-    "# answer_type_classified에서 right인데 _needcheck에서 다른 분류인 경우\n",
-    "right_in_atc_but_other_in_needcheck = []\n",
-    "for qid in atc_right_set:\n",
-    "    if qid in needcheck_wrong:\n",
-    "        right_in_atc_but_other_in_needcheck.append((qid, 'wrong'))\n",
-    "    elif qid in needcheck_abcd:\n",
-    "        right_in_atc_but_other_in_needcheck.append((qid, 'abcd'))\n",
-    "\n",
-    "if right_in_atc_but_other_in_needcheck:\n",
-    "    print(f\"\\n[answer_type_classified: right → _needcheck: 다른 분류] ({len(right_in_atc_but_other_in_needcheck)}개)\")\n",
-    "    for qid, wrong_type in right_in_atc_but_other_in_needcheck:\n",
-    "        print(f\"  - {qid} → {wrong_type}\")\n",
-    "\n",
-    "# answer_type_classified에서 wrong인데 _needcheck에서 다른 분류인 경우\n",
-    "wrong_in_atc_but_other_in_needcheck = []\n",
-    "for qid in atc_wrong_set:\n",
-    "    if qid in needcheck_right:\n",
-    "        wrong_in_atc_but_other_in_needcheck.append((qid, 'right'))\n",
-    "    elif qid in needcheck_abcd:\n",
-    "        wrong_in_atc_but_other_in_needcheck.append((qid, 'abcd'))\n",
-    "\n",
-    "if wrong_in_atc_but_other_in_needcheck:\n",
-    "    print(f\"\\n[answer_type_classified: wrong → _needcheck: 다른 분류] ({len(wrong_in_atc_but_other_in_needcheck)}개)\")\n",
-    "    for qid, wrong_type in wrong_in_atc_but_other_in_needcheck:\n",
-    "        print(f\"  - {qid} → {wrong_type}\")\n",
-    "\n",
-    "# answer_type_classified에서 abcd인데 _needcheck에서 다른 분류인 경우\n",
-    "abcd_in_atc_but_other_in_needcheck = []\n",
-    "for qid in atc_abcd_set:\n",
-    "    if qid in needcheck_right:\n",
-    "        abcd_in_atc_but_other_in_needcheck.append((qid, 'right'))\n",
-    "    elif qid in needcheck_wrong:\n",
-    "        abcd_in_atc_but_other_in_needcheck.append((qid, 'wrong'))\n",
-    "\n",
-    "if abcd_in_atc_but_other_in_needcheck:\n",
-    "    print(f\"\\n[answer_type_classified: abcd → _needcheck: 다른 분류] ({len(abcd_in_atc_but_other_in_needcheck)}개)\")\n",
-    "    for qid, wrong_type in abcd_in_atc_but_other_in_needcheck:\n",
-    "        print(f\"  - {qid} → {wrong_type}\")\n",
-    "\n",
-    "# 전체 요약\n",
-    "print(\"\\n\" + \"=\" * 80)\n",
-    "print(\"전체 요약\")\n",
-    "print(\"=\" * 80)\n",
-    "print(f\"Right 분류 일치율: {len(right_match)}/{len(atc_right_set)} ({len(right_match)/len(atc_right_set)*100:.2f}%)\" if atc_right_set else \"Right 분류 일치율: N/A\")\n",
-    "print(f\"Wrong 분류 일치율: {len(wrong_match)}/{len(atc_wrong_set)} ({len(wrong_match)/len(atc_wrong_set)*100:.2f}%)\" if atc_wrong_set else \"Wrong 분류 일치율: N/A\")\n",
-    "print(f\"Abcd 분류 일치율: {len(abcd_match)}/{len(atc_abcd_set)} ({len(abcd_match)/len(atc_abcd_set)*100:.2f}%)\" if atc_abcd_set else \"Abcd 분류 일치율: N/A\")\n",
-    "print(f\"\\n총 교차 분류 오류: {len(right_in_atc_but_other_in_needcheck) + len(wrong_in_atc_but_other_in_needcheck) + len(abcd_in_atc_but_other_in_needcheck)}개\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "b6896e25",
    "metadata": {},
@@ -657,7 +367,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "aic",
+   "display_name": "internal",
    "language": "python",
    "name": "python3"
   },
@@ -671,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.19"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
