[251118] 객관식to서술형 변형

--- a/multiple_toessay.ipynb
+++ b/multiple_toessay.ipynb
@@ -2,18 +2,312 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e82bc346",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2500"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 옳지 않은 것 문제들 중 해설 많은 애들 선별하기\n",
+    "import os, json\n",
+    "from tools.pipeline.config import ONEDRIVE_PATH\n",
+    "\n",
+    "classified = json.load(open(os.path.join(ONEDRIVE_PATH, 'evaluation/eval_data/7_multiple_rw/answer_type_classified.json')))\n",
+    "wrong_data = [p for p in classified if p['answer_type'] == 'wrong']\n",
+    "len(wrong_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "36a37028",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 옳지 않은 것 문제들 중 해설 많은 애들 선별하기\n"
+    "from tools.core.llm_query import LLMQuery\n",
+    "\n",
+    "llm_query = LLMQuery()\n",
+    "\n",
+    "def is_full_explanation(llm, question, answer, options, explanation):\n",
+    "    system_prompt = \"\"\"다음은 문제, 정답, 해설입니다. 해설이 문제의 모든 선지에 대한 설명을 포함하는지 확인해주세요.\n",
+    "    만약 모두 포함하면 'full'을 반환하고, 포함하지 않으면 'notfull'을 반환해주세요.\n",
+    "    \"\"\"\n",
+    "    user_prompt = f\"\"\"\n",
+    "    문제: {question}\n",
+    "    정답: {answer}\n",
+    "    선지: {options}\n",
+    "    해설: {explanation}\n",
+    "    \"\"\"\n",
+    "    response = llm.query_openrouter(system_prompt, user_prompt, model_name='google/gemini-2.5-flash')\n",
+    "    return response"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "353b6f2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wrong_data[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e38cf89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = is_full_explanation(llm_query, wrong_data[0]['question'], wrong_data[0]['answer'], wrong_data[0]['options'], wrong_data[0]['explanation'])\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "8ade783d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2500/2500 [1:02:22<00:00,  1.50s/it]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from tqdm import tqdm\n",
+    "\n",
+    "full_explanation = []\n",
+    "notfull_explanation = []\n",
+    "fail = []\n",
+    "\n",
+    "for wd in tqdm(wrong_data):\n",
+    "    response = is_full_explanation(llm_query, wd['question'], wd['answer'], wd['options'], wd['explanation'])\n",
+    "    if response == 'full':\n",
+    "        full_explanation.append(wd)\n",
+    "    elif response == 'notfull':\n",
+    "        notfull_explanation.append(wd)\n",
+    "    else:\n",
+    "        fail.append(wd)\n",
+    "\n",
+    "len(full_explanation)+len(notfull_explanation)+len(fail) == len(wrong_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "31050d19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(os.path.join(ONEDRIVE_PATH, 'evaluation/eval_data/7_multiple_rw/full_explanation.json'), 'w', encoding='utf-8') as f:\n",
+    "    json.dump(full_explanation, f, ensure_ascii=False, indent=4)\n",
+    "\n",
+    "with open(os.path.join(ONEDRIVE_PATH, 'evaluation/eval_data/7_multiple_rw/notfull_explanation.json'), 'w', encoding='utf-8') as f:\n",
+    "    json.dump(notfull_explanation, f, ensure_ascii=False, indent=4)\n",
+    "\n",
+    "with open(os.path.join(ONEDRIVE_PATH, 'evaluation/eval_data/7_multiple_rw/fail.json'), 'w', encoding='utf-8') as f:\n",
+    "    json.dump(fail, f, ensure_ascii=False, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "93e68b64",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "859"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from tools.pipeline.config import ONEDRIVE_PATH\n",
+    "\n",
+    "full_explanation = json.load(open(os.path.join(ONEDRIVE_PATH, 'evaluation/eval_data/7_multiple_rw/full_explanation.json')))\n",
+    "len(full_explanation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "fef889a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'file_id': 'SS0206',\n",
+       " 'title': '2025 해커스 증권투자권유대행인 한권합격 핵심 개념 + 적중문제',\n",
+       " 'chapter': '제1과목 증권분석 및 증권시장',\n",
+       " 'tag': 'q_0211_0003',\n",
+       " 'domain': '자산운용',\n",
+       " 'subdomain': '투자분석 및 포트폴리오이론',\n",
+       " 'classification_reason': '코넥스 상장법인 기업설명회(개최 주기, 공시 의무, 신고, 상장폐지)로 증권 시장 상장 규정과 공시 중심',\n",
+       " 'is_calculation': False,\n",
+       " 'question': '코넥스상장법인의 기업설명회에 대한 설명 중 잘못된 것은?',\n",
+       " 'options': ['① 코넥스상장법인은 분기마다 기업설명회를 개최해야 한다.',\n",
+       "  '② 코넥스상장법인이 기업설명회를 개최하는 경우 일시, 장소, 설명회 내용 등을 공시해야 할 의무가 있다.',\n",
+       "  '③ 코넥스상장법인은 기업설명회 개최 결과를 개최일 익일까지 거래소에 신고해야 한다.',\n",
+       "  '④ 코넥스상장법인이 2반기 동안 연속하여 기업설명회를 개최하지 않거나, 3년 동안 4회 이상 개최하지 않은 경우 상장폐지사유에 해당한다.'],\n",
+       " 'answer': '①',\n",
+       " 'explanation': '코넥스상장법인은 반기마다 기업설명회를 개최해야 한다.',\n",
+       " 'answer_type': 'wrong'}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_explanation[150]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a51b7436",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f2f4e09",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c2d81ee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34ceda53",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0815c0ff",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e7ab4fd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ff52a7b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "1ca9be4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os, json\n",
+    "with open(os.path.join('/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/2_subdomain/multiple_subdomain_classified_ALL.json'), 'r', encoding='utf-8') as f:\n",
+    "    data = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a88919a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "58482"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1b7ed2e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "internal",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
