--- a/test.ipynb
+++ b/test.ipynb
@@ -499,46 +499,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-11-18 22:25:03,067 - INFO - exam_config.json에서 도메인-서브도메인 매핑 로드 완료\n",
+      "2025-11-18 22:25:03,069 - INFO - 출력 디렉토리: /Users/yejin/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/evaluation/eval_data/2_subdomain\n",
+      "2025-11-18 22:25:03,099 - INFO - 통계 정보 저장 완료: /Users/yejin/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/evaluation/eval_data/2_subdomain/STATS_multiple_subdomain.md\n"
+     ]
+    }
+   ],
    "source": [
     "import os, json\n",
-    "from tools.evaluation import qna_subdomain_classifier\n",
+    "from tools.qna.processing.qna_subdomain_classifier import QnASubdomainClassifier\n",
+    "from tools.pipeline.config import ONEDRIVE_PATH\n",
     "\n",
-    "ONEDRIVE_PATH = os.path.join(os.path.expanduser(\"~\"), \"Library/CloudStorage/OneDrive-개인/데이터L/selectstar\")\n",
     "\n",
     "file_name = os.path.join(ONEDRIVE_PATH, 'evaluation/eval_data/2_subdomain/multiple_subdomain_classified_ALL.json')\n",
     "with open(file_name, 'r', encoding='utf-8') as f:\n",
     "    multiple = json.load(f)\n",
     "\n",
-    "classifier = qna_subdomain_classifier.QnASubdomainClassifier()\n",
+    "classifier = QnASubdomainClassifier()\n",
     "classifier.save_statistics(multiple)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## 처음 subdomain 돌리고 잘못 부여된 subdomain 조정\n",
-    "# for m in multiple:\n",
-    "#     if m['subdomain'].count('-') >= 1:\n",
-    "#         # print(m)\n",
-    "#         # break\n",
-    "#         m['subdomain'] = m['subdomain'].split('-')[0].strip()\n",
-    "#         # print(m)\n",
-    "#         # break\n",
-    "#     elif m['subdomain'].count('.') >= 1:\n",
-    "#         m['subdomain'] = m['subdomain'].split('.')[1].strip()\n",
-    "        \n",
-    "\n",
-    "# classifier.save_statistics(multiple)\n",
-    "#     # print(\"없는데?\", m['subdomain'])\n",
-    "\n",
-    "# with open(file_name, 'w', encoding='utf-8') as f:\n",
-    "#     json.dump(multiple, f, ensure_ascii=False, indent=4)\n"
+    "for m in multiple:\n",
+    "    if m['subdomain'] == '영업윤리 및 법규준수' and m['domain'] == '내부통제':\n",
+    "        print(m)"
    ]
   },
   {
@@ -547,17 +543,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# with open(file_name, 'r', encoding='utf-8') as f:\n",
-    "#     multiple = json.load(f)\n",
-    "\n",
-    "# for m in multiple:\n",
-    "#     m['domain'] = \"\"\n",
-    "#     m['subdomain'] = \"\"\n",
-    "#     m['classification_reason'] = \"\"\n",
-    "#     m['is_calculation'] = False\n",
-    "\n",
-    "# with open('/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/2_subdomain/multiple.json', 'w', encoding='utf-8') as f:\n",
-    "#     json.dump(multiple, f, ensure_ascii=False, indent=4)\n"
+    "m"
    ]
   },
   {
@@ -569,10 +555,12 @@
     "# 도메인별 통계 계산\n",
     "from collections import defaultdict\n",
     "\n",
+    "\n",
+    "\n",
     "calculation = defaultdict(int)  # 계산 문제 개수\n",
     "total_by_domain = defaultdict(int)  # 전체 문제 개수\n",
     "\n",
-    "for question in first_exam:\n",
+    "for question in fifth_exam:\n",
     "    domain = question.get('domain', '미분류')\n",
     "    total_by_domain[domain] += 1\n",
     "    if question.get('is_calculation') == True:\n",
@@ -869,7 +857,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "internal",
+   "display_name": "aic",
    "language": "python",
    "name": "python3"
   },
@@ -883,7 +871,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
