--- a/multiple_toessay.ipynb
+++ b/multiple_toessay.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "e82bc346",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "2500"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -20,9 +20,10 @@
    "source": [
     "# 옳지 않은 것 문제들 중 해설 많은 애들 선별하기\n",
     "import os, json\n",
-    "from tools.pipeline.config import ONEDRIVE_PATH\n",
+    "# from tools.pipeline.config import ONEDRIVE_PATH\n",
+    "ONEDRIVE_PATH = 'C:\\\\Users\\\\Jin\\\\Onedrive\\\\데이터L\\\\selectstar'\n",
     "\n",
-    "classified = json.load(open(os.path.join(ONEDRIVE_PATH, 'evaluation/eval_data/7_multiple_rw/answer_type_classified.json')))\n",
+    "classified = json.load(open(os.path.join(ONEDRIVE_PATH, 'evaluation', 'eval_data', '7_multiple_rw', 'answer_type_classified.json')))\n",
     "wrong_data = [p for p in classified if p['answer_type'] == 'wrong']\n",
     "len(wrong_data)"
    ]
@@ -135,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "93e68b64",
    "metadata": {},
    "outputs": [
@@ -145,21 +146,21 @@
        "859"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from tools.pipeline.config import ONEDRIVE_PATH\n",
+    "# from tools.pipeline.config import ONEDRIVE_PATH\n",
     "\n",
-    "full_explanation = json.load(open(os.path.join(ONEDRIVE_PATH, 'evaluation/eval_data/7_multiple_rw/full_explanation.json')))\n",
+    "full_explanation = json.load(open(os.path.join(ONEDRIVE_PATH, 'evaluation', 'eval_data', '7_multiple_rw', 'full_explanation.json')))\n",
     "len(full_explanation)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "fef889a1",
    "metadata": {},
    "outputs": [
@@ -184,7 +185,7 @@
        " 'answer_type': 'wrong'}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +294,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "internal",
+   "display_name": "aic",
    "language": "python",
    "name": "python3"
   },
@@ -307,7 +308,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
