--- a/multiple_toessay.ipynb
+++ b/multiple_toessay.ipynb
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "93e68b64",
    "metadata": {},
    "outputs": [
@@ -146,13 +146,14 @@
        "859"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# from tools.pipeline.config import ONEDRIVE_PATH\n",
+    "from tools.pipeline.config import ONEDRIVE_PATH\n",
+    "import os, json\n",
     "\n",
     "full_explanation = json.load(open(os.path.join(ONEDRIVE_PATH, 'evaluation', 'eval_data', '7_multiple_rw', 'full_explanation.json')))\n",
     "len(full_explanation)"
@@ -160,63 +161,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "fef889a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'file_id': 'SS0397', 'title': '2025 시대에듀 EBS 공인노무사 1차 5개년 기출문제해설', 'chapter': 'PART 02 노동법 Ⅱ', 'tag': 'q_0106_0001', 'domain': '노무', 'subdomain': '노사관계 및 분쟁조정', 'classification_reason': '교원의 노동조합 설립 및 운영, 단체교섭, 조정, 중재 등 노조법 관련 노사관계 조정', 'is_calculation': False, 'question': '교원의 노동조합 설립 및 운영 등에 관한 법률에 관한 설명으로 옳지 않은 것은?', 'options': ['①교원으로 임용되어 근무하였던 사람으로서 노동조합 규약으로 정하는 사람은 노동조합에 가입할 수 있다.', '②전임자는 그 전임기간 중 전임자임을 이유로 승급 또는 그 밖의 신분상의 불이익을 받지 아니한다.', '③단체교섭이 결렬된 경우 중앙노동위원회는 당사자 양쪽이 조정을 신청하는 경우에 한하여 조정을 시작할 수 있다.', '④중앙노동위원회가 제시한 조정안을 당사자의 어느 한쪽이라도 거부한 경우에는 중앙노동위원회는 중재를 한다.', '⑤관계 당사자는 중앙노동위원회의 중재재정이 위법하거나 월권에 의한 것이라고 인정하는 경우에는 중재재정서를 송달받은 날부터 15일 이내에 중앙노동위원회 위원장을 피고로 하여 행정소송을 제기할 수 있다.'], 'answer': '③', 'explanation': '교원의 노동조합 설립 및 운영 등에 관한 법률에 관한 설명으로 옳지 않은 것은?\\n① 교원으로 임용되어 근무하였던 사람으로서 노동조합 규약으로 정하는 사람은 노동조합에 가입할 수 있다. 교노법 제4조의2 제2호\\n② 전임자는 그 전임기간 중 전임자임을 이유로 승급 또는 그 밖의 신분상의 불이익을 받지 아니한다.\\n교노법 제5조 제4항\\n❸ 단체교섭이 결렬된 경우 중앙노동위원회는 당사자 양쪽이 조정을 신청하는 경우에 한하여 조정을 시작할 수 있다.\\n단체교섭이 결렬된 경우에는 당사자 어느 한쪽 또는 양쪽은 중앙노동위원회에 조정(調停)을 신청할 수 있다 (교노법 제9조 제1항).\\n④ 중앙노동위원회가 제시한 조정안을 당사자의 어느 한쪽이라도 거부한 경우에는 중앙노동위원회는 중재를 한다.\\n중앙노동위원회는 단체교섭이 결렬되어 관계 당사자 양쪽이 함께 중재를 신청한 경우, 중앙노동위원회가 제시한 조정안을 당사자의 어느 한쪽이라도 거부한 경우, 중앙노동위원회 위원장이 직권으로 또는 고용노동부장관의 요청에 따라 중재에 회부한다는 결정을 한 경우 등에 해당하는 경우에는 중재(仲裁)를 한다(교노법 제10조).\\n⑤ 관계 당사자는 중앙노동위원회의 중재재정이 위법하거나 월권에 의한 것이라고 인정하는 경우에는 중재재정서를 송달받은 날부터 15일 이내에 중앙노동위원회 위원장을 피고로 하여 행정소송을 제기할 수 있다. 교노법 제12조 제1항', 'answer_type': 'wrong'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "q = full_explanation[123]\n",
+    "print(q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a51b7436",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "system_prompt = \"\"\"\n",
+    "다음 지침을 따르며, 주어진 선택지와 해설만으로 객관식 문제를 서술형 문제로 변환하시오.\n",
+    "\n",
+    "역할\n",
+    "- 당신은 출제자다. 선택지(선지)와 해설만을 근거로 문제의 주제를 도출하고, 키워드를 포함한 서술형 문제를 만든다.\n",
+    "- 외부 지식이나 원문 질문(문두)은 사용하지 않는다. 선택지와 해설에 나타난 정보만 활용한다.\n",
+    "\n",
+    "절차\n",
+    "1) 주제 도출\n",
+    "- 모든 선택지와 해설에서 반복적으로 등장하는 공통 대상을 가장 간결한 명사구로 추출한다.\n",
+    "- 형식: [대상/범주] + [제도/행위/사안] 형태를 우선한다.\n",
+    "- 예: “… 공시해야 한다”, “… 개최 결과 신고” 등이 반복되면 “공시·신고가 수반되는 [행위/제도]”의 정확한 명칭을 선택지 안에서 찾아 정제한다.\n",
+    "- 부정(잘못된 것은 등), 정오 판정, 숫자·기한·빈도 등 정답 단서를 주는 요소는 주제에서 제외한다.\n",
+    "\n",
+    "2) 키워드 추출(최대 10개)\n",
+    "- 각 선택지에서 1개씩, 해설에서 필요시 1~2개 추가로, 총 4~10개의 핵심 키워드를 뽑는다.\n",
+    "- 키워드는 문장 대신 2~6어 절의 명사구로 요약한다.\n",
+    "- 수치(예: 반기, 분기, 익일), 임계값, 정오를 드러내는 표현(항상/아니다/잘못 등), 선택지 문장을 그대로 인용하는 행위는 피한다.\n",
+    "- 숫자나 구체치가 있는 경우 범주화하여 일반화한다.\n",
+    "  - 예: “분기마다 개최” → “개최 주기”\n",
+    "  - “익일까지 신고” → “신고 시한”\n",
+    "  - “일시·장소·내용 공시” → “공시 의무/항목”\n",
+    "  - “상장폐지사유” → “제재 또는 불이익 요건”\n",
+    "- 중복 키워드는 병합하고, 주제 이해에 불필요한 세부는 삭제한다.\n",
+    "\n",
+    "3) 서술형 문제 생성\n",
+    "- 형태: “다음 키워드를 활용하여 [주제]에 대해 서술하시오.\\n키워드: K1, K2, …”\n",
+    "- 키워드는 쉼표로 구분하여 나열한다.\n",
+    "- 정답을 직설적으로 유도하는 표현이나 숫자는 포함하지 않는다.\n",
+    "\n",
+    "출력 형식\n",
+    "- 다음 한 줄만 출력한다.\n",
+    "- “다음 키워드를 활용하여 [주제]에 대해 서술하시오.\\n키워드: K1, K2, K3, …”\n",
+    "\n",
+    "입력 형식(모델에 제공될 내용)\n",
+    "- 선택지: ['① …', '② …', …]\n",
+    "- 해설: …\n",
+    "\n",
+    "평가 기준(내부 점검)\n",
+    "- 주제가 선택지·해설의 공통 초점과 일치하는가?\n",
+    "- 키워드가 10개 이하고, 각 키워드가 중립적·범주적 표현인가?\n",
+    "- 숫자·정오 단서를 제거했는가?\n",
+    "- 출력이 지정된 한 줄 형식을 따르는가?\n",
+    "\"\"\"\n",
+    "\n",
+    "user_prompt = f\"\"\"\n",
+    "========= 문제 ========\n",
+    "- 문제 지문: {q['question']}\n",
+    "- 선지 ①~⑤: {q['options']}\n",
+    "- 정답: {q['answer']}\n",
+    "- 선택 해설: {q['explanation']}\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "6f2f4e09",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-11-19 00:39:30,523 - INFO - Retrying request to /chat/completions in 0.381940 seconds\n",
+      "2025-11-19 00:39:40,917 - INFO - Retrying request to /chat/completions in 0.972773 seconds\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "다음 키워드를 활용하여 교원노조법상 조합 활동·분쟁 해결 제도에 대해 서술하시오.  \n",
+      "키워드: 가입 대상, 전임자 처우, 단체교섭 결렬, 조정 신청 주체, 중재 개시 요건, 중재재정 불복 소송\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tools.core.llm_query import LLMQuery\n",
+    "\n",
+    "llm = LLMQuery()\n",
+    "\n",
+    "response = llm.query_openrouter(system_prompt, user_prompt, model_name = 'openai/o3')\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "1c2d81ee",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'file_id': 'SS0206',\n",
-       " 'title': '2025 해커스 증권투자권유대행인 한권합격 핵심 개념 + 적중문제',\n",
-       " 'chapter': '제1과목 증권분석 및 증권시장',\n",
-       " 'tag': 'q_0211_0003',\n",
-       " 'domain': '자산운용',\n",
-       " 'subdomain': '투자분석 및 포트폴리오이론',\n",
-       " 'classification_reason': '코넥스 상장법인 기업설명회(개최 주기, 공시 의무, 신고, 상장폐지)로 증권 시장 상장 규정과 공시 중심',\n",
+       "{'file_id': 'SS0397',\n",
+       " 'title': '2025 시대에듀 EBS 공인노무사 1차 5개년 기출문제해설',\n",
+       " 'chapter': 'PART 02 노동법 Ⅱ',\n",
+       " 'tag': 'q_0106_0001',\n",
+       " 'domain': '노무',\n",
+       " 'subdomain': '노사관계 및 분쟁조정',\n",
+       " 'classification_reason': '교원의 노동조합 설립 및 운영, 단체교섭, 조정, 중재 등 노조법 관련 노사관계 조정',\n",
        " 'is_calculation': False,\n",
-       " 'question': '코넥스상장법인의 기업설명회에 대한 설명 중 잘못된 것은?',\n",
-       " 'options': ['① 코넥스상장법인은 분기마다 기업설명회를 개최해야 한다.',\n",
-       "  '② 코넥스상장법인이 기업설명회를 개최하는 경우 일시, 장소, 설명회 내용 등을 공시해야 할 의무가 있다.',\n",
-       "  '③ 코넥스상장법인은 기업설명회 개최 결과를 개최일 익일까지 거래소에 신고해야 한다.',\n",
-       "  '④ 코넥스상장법인이 2반기 동안 연속하여 기업설명회를 개최하지 않거나, 3년 동안 4회 이상 개최하지 않은 경우 상장폐지사유에 해당한다.'],\n",
-       " 'answer': '①',\n",
-       " 'explanation': '코넥스상장법인은 반기마다 기업설명회를 개최해야 한다.',\n",
+       " 'question': '교원의 노동조합 설립 및 운영 등에 관한 법률에 관한 설명으로 옳지 않은 것은?',\n",
+       " 'options': ['①교원으로 임용되어 근무하였던 사람으로서 노동조합 규약으로 정하는 사람은 노동조합에 가입할 수 있다.',\n",
+       "  '②전임자는 그 전임기간 중 전임자임을 이유로 승급 또는 그 밖의 신분상의 불이익을 받지 아니한다.',\n",
+       "  '③단체교섭이 결렬된 경우 중앙노동위원회는 당사자 양쪽이 조정을 신청하는 경우에 한하여 조정을 시작할 수 있다.',\n",
+       "  '④중앙노동위원회가 제시한 조정안을 당사자의 어느 한쪽이라도 거부한 경우에는 중앙노동위원회는 중재를 한다.',\n",
+       "  '⑤관계 당사자는 중앙노동위원회의 중재재정이 위법하거나 월권에 의한 것이라고 인정하는 경우에는 중재재정서를 송달받은 날부터 15일 이내에 중앙노동위원회 위원장을 피고로 하여 행정소송을 제기할 수 있다.'],\n",
+       " 'answer': '③',\n",
+       " 'explanation': '교원의 노동조합 설립 및 운영 등에 관한 법률에 관한 설명으로 옳지 않은 것은?\\n① 교원으로 임용되어 근무하였던 사람으로서 노동조합 규약으로 정하는 사람은 노동조합에 가입할 수 있다. 교노법 제4조의2 제2호\\n② 전임자는 그 전임기간 중 전임자임을 이유로 승급 또는 그 밖의 신분상의 불이익을 받지 아니한다.\\n교노법 제5조 제4항\\n❸ 단체교섭이 결렬된 경우 중앙노동위원회는 당사자 양쪽이 조정을 신청하는 경우에 한하여 조정을 시작할 수 있다.\\n단체교섭이 결렬된 경우에는 당사자 어느 한쪽 또는 양쪽은 중앙노동위원회에 조정(調停)을 신청할 수 있다 (교노법 제9조 제1항).\\n④ 중앙노동위원회가 제시한 조정안을 당사자의 어느 한쪽이라도 거부한 경우에는 중앙노동위원회는 중재를 한다.\\n중앙노동위원회는 단체교섭이 결렬되어 관계 당사자 양쪽이 함께 중재를 신청한 경우, 중앙노동위원회가 제시한 조정안을 당사자의 어느 한쪽이라도 거부한 경우, 중앙노동위원회 위원장이 직권으로 또는 고용노동부장관의 요청에 따라 중재에 회부한다는 결정을 한 경우 등에 해당하는 경우에는 중재(仲裁)를 한다(교노법 제10조).\\n⑤ 관계 당사자는 중앙노동위원회의 중재재정이 위법하거나 월권에 의한 것이라고 인정하는 경우에는 중재재정서를 송달받은 날부터 15일 이내에 중앙노동위원회 위원장을 피고로 하여 행정소송을 제기할 수 있다. 교노법 제12조 제1항',\n",
        " 'answer_type': 'wrong'}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "full_explanation[150]"
+    "q"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a51b7436",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6f2f4e09",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1c2d81ee",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
