--- a/make_prompt.ipynb
+++ b/make_prompt.ipynb
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "9090e447",
    "metadata": {},
    "outputs": [],
@@ -304,15 +304,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "95a0c45a",
    "metadata": {},
    "outputs": [],
    "source": [
     "system_prompt = \"\"\"당신은 프롬프트 엔지니어입니다. 아래와 같은 원리를 담아 주어진 객관식 문제를 서술형 문제로 변형하는 프롬프트를 만들려고 합니다.\n",
     "\n",
-    "1. 기존 객관식 문제에서 '어떤 내용'을 서술하면 좋을지 추출 (ex. 코넥스상장법인의 기업설명회에 대한 설명 중 잘못된 것은? -> 코넥스상장법인의 기업설명회)\n",
-    "2. 추출한 내용을 서술형 문제로 변형 (ex. 코넥스상장법인의 기업설명회에 대해 서술하시오)\n",
+    "1. 기존 객관식 문제의 질문에서 주제 추출 (ex. 코넥스상장법인의 기업설명회에 대한 설명 중 잘못된 것은? -> 코넥스상장법인의 기업설명회)\n",
+    "2. 추출한 내용을 바탕으로 서술형 문제로 변형 (ex. 코넥스상장법인의 기업설명회에 대해 서술하시오)\n",
     "3. 1개의 옳지 않은 선지와 그 해설, 3~4개의 옳은 선지와 그 해설에서 각 선지별로 키워드 추출 (ex. ① 코넥스상장법인은 분기마다 기업설명회를 개최해야 한다. -> 기업설명회 개최 주기)\n",
     "4. 키워드를 포함한 서술형 문제 완성 (ex. 다음 키워드를 활용하여 코넥스상장법인의 기업설명회에 관해 서술하시오.\\n 키워드: 기업설명회 개최 주기, 상장폐지사유, 공시 의무, ...)\n",
     "\n",
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "cb6c33aa",
    "metadata": {},
    "outputs": [
@@ -355,48 +355,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "다음 지침을 따르며, 주어진 선택지와 해설만으로 객관식 문제를 서술형 문제로 변환하시오.\n",
+      "다음 지시문을 따르세요. 당신의 역할은 주어진 객관식 항목(선지)과 해설만을 근거로 문제의 핵심 주제를 추론하고, 이를 서술형 문제로 변환하는 것입니다.\n",
       "\n",
-      "역할\n",
-      "- 당신은 출제자다. 선택지(선지)와 해설만을 근거로 문제의 주제를 도출하고, 키워드를 포함한 서술형 문제를 만든다.\n",
-      "- 외부 지식이나 원문 질문(문두)은 사용하지 않는다. 선택지와 해설에 나타난 정보만 활용한다.\n",
+      "입력으로 제공되는 것\n",
+      "- 선택지: 문자열 배열\n",
+      "- 정답: 정답 표기(예: '①' 또는 인덱스)\n",
+      "- 해설: 정답에 관한 설명 또는 정오 수정 설명\n",
       "\n",
-      "절차\n",
-      "1) 주제 도출\n",
-      "- 모든 선택지와 해설에서 반복적으로 등장하는 공통 대상을 가장 간결한 명사구로 추출한다.\n",
-      "- 형식: [대상/범주] + [제도/행위/사안] 형태를 우선한다.\n",
-      "- 예: “… 공시해야 한다”, “… 개최 결과 신고” 등이 반복되면 “공시·신고가 수반되는 [행위/제도]”의 정확한 명칭을 선택지 안에서 찾아 정제한다.\n",
-      "- 부정(잘못된 것은 등), 정오 판정, 숫자·기한·빈도 등 정답 단서를 주는 요소는 주제에서 제외한다.\n",
+      "필수 규칙\n",
+      "1) 자료 제한: 선택지와 해설만 사용하세요. 원 질문 문구가 있더라도 주제 추론에 활용하지 마세요.\n",
+      "2) 주제 추출: 선택지와 해설에서 반복적으로 등장하는 핵심 명사구를 찾고, 가장 포괄적·간결한 1개의 주제를 도출하세요.\n",
+      "3) 서술형 변환: “[주제]에 관해 서술하시오.” 형태로 만들되, 앞에 “다음 키워드를 활용하여”를 붙여 한 문장으로 제시하세요.\n",
+      "4) 선지 분류: 해설을 근거로 틀린 선지 1개와 옳은 선지 3~4개를 식별하세요. 옳은 선지가 3개 미만이면 가능한 만큼만 사용하세요.\n",
+      "   - 정답 표기가 있는 경우, 해설과의 정합성을 우선으로 판단하여 틀린 선지를 확정하세요.\n",
+      "5) 키워드 추출: 틀린 선지 1개와 옳은 선지 3~4개 각각에서 핵심 개념을 1개씩 뽑아 키워드를 구성하세요. 총 5~10개 이내로 하며, 다음 원칙을 지키세요.\n",
+      "   - 정답이 바로 드러나지 않도록 수치·주기·임계치·예외 조건·직접적인 정오 표현을 추상화하십시오.\n",
+      "   - 예: “반기마다 개최” → “개최 주기”, “익일 신고” → “보고 시한”, “상장폐지사유” → “제재 요건”\n",
+      "   - 중복 키워드는 제거하고, 명사구 중심으로 간결히 표현하세요.\n",
+      "6) 출력은 정확히 두 줄만 생성하세요.\n",
+      "   - 1행: 서술형 문제: 다음 키워드를 활용하여 [주제]에 관해 서술하시오.\n",
+      "   - 2행: 키워드: 키워드1, 키워드2, 키워드3, …\n",
       "\n",
-      "2) 키워드 추출(최대 10개)\n",
-      "- 각 선택지에서 1개씩, 해설에서 필요시 1~2개 추가로, 총 4~10개의 핵심 키워드를 뽑는다.\n",
-      "- 키워드는 문장 대신 2~6어 절의 명사구로 요약한다.\n",
-      "- 수치(예: 반기, 분기, 익일), 임계값, 정오를 드러내는 표현(항상/아니다/잘못 등), 선택지 문장을 그대로 인용하는 행위는 피한다.\n",
-      "- 숫자나 구체치가 있는 경우 범주화하여 일반화한다.\n",
-      "  - 예: “분기마다 개최” → “개최 주기”\n",
-      "  - “익일까지 신고” → “신고 시한”\n",
-      "  - “일시·장소·내용 공시” → “공시 의무/항목”\n",
-      "  - “상장폐지사유” → “제재 또는 불이익 요건”\n",
-      "- 중복 키워드는 병합하고, 주제 이해에 불필요한 세부는 삭제한다.\n",
+      "검증 체크리스트\n",
+      "- 키워드는 10개 이내인가?\n",
+      "- 키워드에 구체 수치·주기·정답을 직설적으로 드러내는 표현이 없는가?\n",
+      "- 주제 문구가 명확하고 간결한가?\n",
       "\n",
-      "3) 서술형 문제 생성\n",
-      "- 형태: “다음 키워드를 활용하여 [주제]에 대해 서술하시오. 키워드: K1, K2, …”\n",
-      "- 키워드는 쉼표로 구분하여 나열한다.\n",
-      "- 정답을 직설적으로 유도하는 표현이나 숫자는 포함하지 않는다.\n",
+      "예시 입력 형식\n",
+      "선택지: ['① ...', '② ...', '③ ...', '④ ...']\n",
+      "정답: '①'\n",
+      "해설: '...'\n",
       "\n",
-      "출력 형식\n",
-      "- 다음 한 줄만 출력한다.\n",
-      "- “다음 키워드를 활용하여 [주제]에 대해 서술하시오. 키워드: K1, K2, K3, …”\n",
-      "\n",
-      "입력 형식(모델에 제공될 내용)\n",
-      "- 선택지: ['① …', '② …', …]\n",
-      "- 해설: …\n",
-      "\n",
-      "평가 기준(내부 점검)\n",
-      "- 주제가 선택지·해설의 공통 초점과 일치하는가?\n",
-      "- 키워드가 10개 이하고, 각 키워드가 중립적·범주적 표현인가?\n",
-      "- 숫자·정오 단서를 제거했는가?\n",
-      "- 출력이 지정된 한 줄 형식을 따르는가?\n"
+      "예시 출력 형식\n",
+      "서술형 문제: 다음 키워드를 활용하여 [도출한 주제]에 관해 서술하시오.\n",
+      "키워드: [키워드A], [키워드B], [키워드C], ...\n"
      ]
     }
    ],
@@ -416,7 +408,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "aic",
+   "display_name": "internal",
    "language": "python",
    "name": "python3"
   },
@@ -430,7 +422,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.19"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
